2014-05-04 22:04 UTC+0200 Aleksander Czajczynski (hb fki.pl)   * config/win/msvc.mk     ! there is no Platform SDK util detection mechanism. -nologo option       does not exist in SDK rc.exe
  * utils/hbmk2/hbmk2.rc
    ! Platform SDK rc.exe ver 5.2.3690.0 complains about .ico
      file format format (OLDDIB?)

--- a/utils/hbmk2/hbmk2.rc
+++ b/utils/hbmk2/hbmk2.rc
@@ -2,7 +2,7 @@
 #if defined( OS2 ) || defined( __OS2__ ) || defined( OS_2 )
 ICON 1 DISCARDABLE "../../package/harb_os2.ico"
 #else
-#if ! defined( __BORLANDC__ )
+#if 0 // ! defined( __BORLANDC__ )
 1 ICON DISCARDABLE "../../package/harb_win.ico"
 #endif
 #include "../../package/harb_win.rc"
