2014-01-24 23:25 UTC+0100 Przemyslaw Czerpak (druzus/at/poczta.onet.pl)   * src/3rd/zlib/Makefile   * src/3rd/zlib/zlib.dif   * src/3rd/zlib/*     * updated ZLIB 1.2.7 -> 1.2.8
2014-01-24 12:35 UTC+0100 Przemyslaw Czerpak (druzus/at/poczta.onet.pl)
  * src/3rd/png/*
  * src/3rd/png/Makefile
  * src/3rd/png/pnglconf.h
  * src/3rd/png/png.dif
    * updated libpng 1.6.1 -> 1.6.8
    ; modifications below taken from Viktor branch
         Warning: some of them may cause problems with 3-rd party
                  code which needs fully functional libpng.
    * disabled PNG_CONSOLE_IO_SUPPORTED build option.
      (MSVS 2013 doesn't support 'stderr' constant)
    * disabled STDIO dependent parts for all platforms
    * disabled PNG_CONVERT_tIME_SUPPORTED to avoid using
      unsafe RTL calls (as shown by msvc)

--- a/harbour/src/3rd/zlib/Makefile
+++ b/harbour/src/3rd/zlib/Makefile
@@ -1,7 +1,3 @@
-#
-# $Id$
-#
-
 ROOT := ../../../
 
 include $(TOP)$(ROOT)config/global.mk
@@ -37,6 +33,20 @@ ifneq ($(HB_HAS_ZLIB_LOCAL),)
    # To suppress new warnings in version 1.2.5
    ifneq ($(filter $(HB_COMPILER),mingw mingw64 mingwarm cygwin djgpp),)
       HB_CFLAGS += -DNO_VIZ
+   else
+      ifneq ($(filter $(HB_PLATFORM),aix),)
+         HB_CFLAGS += -DNO_VIZ
+      endif
+   endif
+   ifneq ($(filter $(HB_PLATFORM),wce),)
+      HB_CFLAGS += -D_WINCE
+   endif
+   ifeq ($(filter $(HB_PLATFORM),win wce),)
+      HB_CFLAGS += -DHAVE_UNISTD_H
+   else
+      ifneq ($(filter $(HB_COMPILER),watcom),)
+         HB_CFLAGS += -DHAVE_UNISTD_H
+      endif
    endif
    include $(TOP)$(ROOT)config/lib.mk
 else
@@ -44,9 +54,9 @@ else
    include $(TOP)$(ROOT)config/none.mk
 endif
 
-# ORIGIN http://www.zlib.net/
-# VER    1.2.5
-# URL    http://zlib.net/zlib125.zip
+# ORIGIN http://zlib.net/
+# VER    1.2.8
+# URL    http://downloads.sourceforge.net/libpng/zlib128.zip
 # DIFF   zlib.dif
 #
 # MAP    README
