2023-10-12 14:24 UTC+0200 Aleksander Czajczynski (hb fki.pl)    + include/hbdefer.ch    + src/rtl/defer.prg    * src/rtl/Makefile      + added DEFER <exp> and DEFER FUNC <sym> commands, example:        ---          #include "hbdefer.ch"          #include "fileio.ch"          LOCAL nH := FCreate( "test" )          IF nH == F_ERROR               RETURN          ELSE             DEFER FClose( nH )          ENDIF          FWrite( nH, Time() )        ---
   + include/hbproto.ch
     + includes all prototypes of future/work-in-progress
       language elements

--- a/src/rtl/Makefile
+++ b/src/rtl/Makefile
@@ -227,6 +227,7 @@ PRG_SOURCES := \
    checkbox.prg \
    color53.prg \
    dbedit.prg \
+   defer.prg \
    devoutp.prg \
    dircmd.prg \
    dirscan.prg \
